fixed zindex broken on projects page

--- a/style.css
+++ b/style.css
@@ -340,7 +340,6 @@ main {
     color: white;
     padding:1.5rem;
     position: relative;
-    z-index: -2;
 }
 
 .back-vid-projects{
@@ -348,7 +347,7 @@ main {
     width: 75%;
     right: 5%;
     top: 15%;
-    z-index: -1;
+    z-index: 0;
     box-shadow: 0 0 20px black;
 }
 
@@ -389,10 +388,12 @@ main {
     text-decoration: underline;
     text-shadow: 0 0 20px black;
     letter-spacing: 2px;
+    position: relative;
 }
 .project-row {
     display: flex;
     margin: none;
+    position:relative;
     width: 100%;
     justify-content: space-evenly;
     align-items: center;
@@ -416,6 +417,7 @@ main {
 }
 
 .stapler-pdf {
+    z-index: 100;
     height: 400px;
     width: 52%;
 }
